# Text-2-SQL-Generator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.monitoring.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
configs/: config.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: seed_db.py  setup_env.sh
src/: dev_runner.py  main.py
src/api/: routes.py
src/core/: config.py  logger.py
src/db/: connectors.py  executor.py  schema.py
src/llm/: mock_client.py  ollama_client.py
src/prompts/: templates.py
src/security/: audit.py  validator.py
src/services/: text2sql_service.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_clarification_and_quality.py  test_config_precedence.py  test_db.py  test_db_connectors.py  test_explanation_and_history.py  test_preview_and_approval.py  test_routes_preview_approval.py  test_service_memory_bounds.py  test_service_retry.py  test_service_streaming_progress.py  test_validator.py
